# CSFloatPriceChecker

./: README.md  csfloat_cli.py  csfloat_gui.py  pyproject.toml  requirements.txt  secret.py
src/csfloat_price_checker/: __init__.py  api.py  cli.py  config.py  gui.py  models.py  notification.py
